<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".activities.MainActivity">
    <androidx.cardview.widget.CardView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/custom_edt">
            <TextView
                android:id="@+id/tv_login"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/purple"/>
            <EditText
                app:layout_constraintTop_toBottomOf="@+id/tv_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:inputType="text"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/edt_username"
                android:background="@drawable/custom_edt"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/baseline_person_2_24"
                android:textColor="@color/black"
                android:drawablePadding="8dp"/>
            <TextView
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/edt_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/tv_message"
                android:textColor="@color/red"
                android:layout_marginTop="5dp"
                android:gravity="center"
                tools:text="@string/app_name"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:id="@+id/layout_register"
                app:layout_constraintTop_toBottomOf="@+id/tv_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="italic"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:text="@string/no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_register"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    android:text="@string/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <Button
                app:layout_constraintTop_toBottomOf="@+id/layout_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:id="@+id/btn_login"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                app:cornerRadius="20dp"/>
            <ProgressBar
                android:visibility="gone"
                android:indeterminateTint="@color/purple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>